Fix z-index of login background

--- a/user-client/src/App.css
+++ b/user-client/src/App.css
@@ -102,6 +102,7 @@ button:hover {
   right: 0;
   border: 1px solid white;
   padding: 40px;
+  z-index: 1;
 }
 
 .login>form {
